--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/vinicius_araujo_vieira/scup_fale_mais.git"
+    "url": "https://bitbucket.org/vinicius_araujo_vieira/reduxsagaredditfeed.git"
     },
   "author": "Vinicius Araujo Vieira",
   "dependencies": {
@@ -39,6 +39,10 @@
       "webpack": "^2.2",
       "react": "^15.4.2",
       "react-dom": "^15.4.2",
-      "react-router": "^3.0.2"
+      "react-router": "^3.0.2",
+      "redux": "^3.6.0",
+      "redux-saga": "^0.15.3",
+      "react-redux":"^5.0.5",
+      "react-router-redux":"4.0.8"
   }
 }
