--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-scup-fale-mais",
+  "name": "webpack-redux-saga",
   "version": "1.0.0",
   "description": "scup-fale-mais",
   "main": "index.js",
@@ -32,6 +32,7 @@
   "devDependencies": {
       "babel-core": "^6.3.26",
       "babel-loader": "^6.2.4",
+      "babel-polyfill": "^6.0.16",
       "babel-preset-es2015": "^6.3.13",
       "babel-preset-react": "^6.3.13",
       "html-webpack-plugin": "^2.7.2",
